[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/game/source/3/outside/outside.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/game/source/3/outside/bg.jpg" type="Texture" id=3]
[ext_resource path="res://assets/game/source/3/outside/fence.png" type="Texture" id=4]
[ext_resource path="res://assets/game/source/3/outside/barrel.png" type="Texture" id=5]
[ext_resource path="res://scenes/game/character.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/game/juliette.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/cinematic.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 199.635 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.766, 52.8459 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 37.4102, 146.938 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 67.5965, 182.973 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 44.9869, 170.19 )

[sub_resource type="Animation" id=6]

resource/name = "enter"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("character/AnimatedSprite/AnimationPlayer:playback/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "walking_right", "idle_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("character:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -660, 850 ), Vector2( -360, 850 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("juliette:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -812, 860 ), Vector2( -512, 860 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("juliette/Sprite/AnimationPlayer:playback/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "walking_right", "idle_right" ]
}

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="gui" parent="." instance=ExtResource( 2 )]

[node name="background" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 934.486, 492.743 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="fence" type="Sprite" parent="background"]

transform/pos = Vector2( 409.949, 152.366 )
z/z = 2
texture = ExtResource( 4 )

[node name="barrel" type="Sprite" parent="background"]

transform/pos = Vector2( -378.054, 160.195 )
z/z = 2
texture = ExtResource( 5 )

[node name="character" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( -660, 850 )

[node name="juliette" parent="." groups=[
"canInteractObjects",
] instance=ExtResource( 7 )]

transform/pos = Vector2( -812, 860 )

[node name="rightLimit" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 2451.16, 808.249 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightLimit"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="leftLimit" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -585.071, 794.55 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftLimit"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="doorToShop" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 1716.48, 815.099 )
transform/scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="hitbox" type="Area2D" parent="doorToShop"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorToShop/hitbox"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="doorToChildren" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 2370.43, 826.37 )

[node name="hitbox" type="Area2D" parent="doorToChildren"]

transform/pos = Vector2( 0, -13 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorToChildren/hitbox"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="roadsign" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 200, 760 )

[node name="hitbox" type="Area2D" parent="roadsign"]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="roadsign/hitbox"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="pump" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 1236.21, 758.753 )

[node name="hitbox" type="Area2D" parent="pump"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pump/hitbox"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="cinematic" parent="." instance=ExtResource( 8 )]

[node name="cinematicAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/enter = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


